fixed cropped logo and introduced retina logo

--- a/src/nyc_trees/sass/partials/_header.scss
+++ b/src/nyc_trees/sass/partials/_header.scss
@@ -65,6 +65,10 @@
     width: auto;
     padding-top: .5rem;
   }
+
+  img {
+    max-width: 225px;
+  }
 }
 
 .nav-account {
